Add MySQL support and make database connection configurable
Added `mysqlclient` dependency in `Pipfile` and `Pipfile.lock`. Updated `main.py` to use a database URL from environment variables, enabling support for configurable database backends like MySQL.

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ py-cord = {extras = ["voice"], version = "*"}
 python-dotenv = "*"
 dataset = "*"
 audioop-lts = "*"
+mysqlclient = "*"
 
 [dev-packages]
 
