--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-py-cord = {extras = ["voice"], version = "*"}
-python-dotenv = "*"
-dataset = "*"
-mysqlclient = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.12"
+python_full_version = "3.12.3"
