--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+dataset = "*"
+python-dotenv = "*"
+py-cord = {extras = ["voice"], version = "*"}
+mysqlclient = "*"
 
 [dev-packages]
-
-[requires]
-python_version = "3.12"
-python_full_version = "3.12.3"
